--- a/small-buisness-accounting/index.html
+++ b/small-buisness-accounting/index.html
@@ -8,10 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./css/main.min.css" /> -->
-    <link rel="stylesheet" href="./public/stylesheets/main.css" />
+    <link rel="stylesheet" href="public/stylesheets/main.css" />
     <!-- <link rel="stylesheet" href="./css/custom.min.css" /> -->
-    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css" />
-    <title>invoice Generator</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">    <title>invoice Generator</title>
 </head>
 
 <body class="bg-light">
@@ -59,9 +58,9 @@
             <div>
             </div>
         </div>
-        <div id="customerlist">
-            <ul style="margin:0px 0px; padding:0px 0px; list-style:none;">
-                <li>
+        <div>
+            <ul id="customerlist" style="margin:0px 0px; padding:0px 0px; list-style:none;">
+                <!--<li>
                     <a class="d-flex btn btn-light shadow-sm m-1 EditCustomer" onclick="editCustomer(this)" id="customer_{{this.Id}}" data-customer-id={{this.Id}} data-bs-toggle="modal" data-bs-target="#editcustomerModal">
                         <div class="p-2 col-9">
                             <div class="row datarow ">
@@ -81,7 +80,7 @@
                             </div>
                         </div>
                     </a>
-                <li>
+                <li>-->
             </ul>
         </div>
     </section>
@@ -897,21 +896,13 @@
     </section>
     <!-- End of main agg invoices page -->
 
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+            crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
-
-    <script src="https://cdn.auth0.com/js/auth0/9.18/auth0.min.js"></script>
-
-    <script src="../../uijs/ui.js"></script>
-    <script src="../../uijs/customers.js"></script>
-    <script src="../../uijs/proposals.js"></script>
-    <script src="../../uijs/invoices.js"></script>
+    <script src='public/javascripts/customers.js'></script>
 
 </body>
 
